
2 New Booster Packs:
- The Fantasy Pack will of course contain jokers of the fantasy genre
- The Actor Pack will only spawn if you own at least two movie jokers, and will only contain jokers that share actors with jokers you currently own!

Deck Sleeve compatibility:
- Each available Deck now has an equivalent sleeve

Bug Fixes:
- Awarded stickers no longer read ERROR on the badge

Visual Updates:
- Predator now shakes when you are still holding on to the hidden card
- Longlegs now shakes when you are holding it's partner in your hand
- Movie Jokers now show the multiplier they have through synergy
- Synergy indicators now pop up only once, regardless of how many actors they are synergizing with
- Genre synergy is now a general pop up, not a per joker pop up


Spawn Limitations:
Multiple Jokers have had their spawn conditions updated.
- Ready Player One will only spawn if you have at least one joker from the 70s or 80s

Suit Count Jokers:
- The Breakfast Club  will only spawn once you have more Spades in deck than your starting count. 
- Dickie Roberts will only spawn once you have more Spades in deck than your starting count. 
- Titanic will only spawn once you have more Hearts in deck than your starting count.
- Gentlemen Prefer Blondes will only spawn once you have more Hearts in deck than your starting count.

Horror/Monster Card synergy Jokers:
- Child's Play, Gremlins, Incredible Hulk and the Wolf Man will only spawn if you have Horror or Monster cards in your deck, rather than just Horror cards

Debuffed Card Synergy
- Alien 3 now only spawns once you have debuffed cards in deck

V 0.7.2:
New Jokers:
Legendaries:
- 2001: A Space Odyssey

UI update:
- Active jokers now show when they're active in their UI

Confection rework:
- Confections have changed their functionality. Instead of being used up immediately and creating a tag,
     they now become active, and disappear once eaten their effect's triggered.
     
New Vouchers: