@@ -1,4 +1,4 @@
-# Balatro Goes Kino V0.7.2
+# Balatro Goes Kino V0.8
 
 By Ice/IcyEthics
 
@@ -10,23 +10,13 @@ Requirements:
 Balatro Goes Kino is a mod made to turn a game for poker nerds into a game for poker and movie nerds. It's main content is a large set of jokers inspired by movies, as well as new Enhancements and Tarot cards, with plans for boss blinds, challenges and decks. Grab the latest release from the Releases tab: https://github.com/icyethics/Kino/releases
 
 ### Current Content
-- **201 New Jokers**:  From hits like Titanic, E.T. and Iron Man to unnotable and unremarkable flops like The Three Musketeers (2011) and Krazy House. With many more jokers planned.
+- **211 New Jokers**:  From hits like Titanic, E.T. and Iron Man to unnotable and unremarkable flops like The Three Musketeers (2011) and Krazy House. With many more jokers planned.
 - **5 Enhancement:** A slew of new enhancements inspired by movie genres to help really sell that flavour. Sacrifice cards with Demonic cards, awaken monsters with Horror cards, fall in love with Romance cards, and more!
-- **4 Genre boosters:** New joker boosters, containing only jokers of the given genre.
+- **6 Genre boosters:** New joker boosters, containing only jokers of the given genre.
 - **6 New Planets:** 6 strange new worlds from the silver screen.
 - **New Consumable: Confections!** Popcorn, soda and cookies. Items to nourish your run and give them a little boost.
 - **New Mechanics:** Earn extra joker slots by playing movies of the same genre. Start slinging spells. Even alien abduction!
 
-### Planned Content
-
-- *Even more card enhancements*
-- *More Genre Boosters*
-
-- *Real dumb film nerd mechanics.*
-Get ready for jokers to get bonuses when they all share an actor, or the Kevin Bacon sticker, debuffing jokers if you don't own another joker that shares an actor with them.
-
-- *Genre & Director decks.*
-Increase the chances of associated jokers showing up, and start with a joker of that genre, or by that director.
 
 ### FAQ:
 *I'm here to look at the code and see if I can learn from it for my own mod. What can I take?*
