@@ -42,8 +42,11 @@ SMODS.Joker {
         if context.individual and context.cardarea == G.play then
             if context.other_card:is_suit("Clubs") then
                 local money = math.floor((G.GAME.dollars + (G.GAME.dollar_buffer or 0)) / card.ability.extra.threshold)
+                if to_number then
+                    money = to_number(money)
+                end
                 return {
-                    dollars = to_number(money),
+                    dollars = money,
                     card = context.other_card
                 }
             end
